--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer portfolio</title>
+    <title>developer fortfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,500;0,800;1,500;1,700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style/portfolio.css">
 </head>
 <body>
     <header>
-
+           <nav>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y </h3>
+            <ul>
+                <li> <a href="#">Fortfolio</a></li>
+                <li> <a href="#">Blog</a></li>
+                <li> <button class="button-primary">Heir Me</button></li>
+            </ul>
+           </nav>
     </header>
     <main>
 
     </main>
     <footer>
-        
+
     </footer>
+    
 </body>
 </html>
