--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style/portfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
            <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y </h3>
             <ul>
@@ -19,6 +19,16 @@
                 <li> <button class="button-primary">Heir Me</button></li>
             </ul>
            </nav>
+           <div class="banar">
+            <div class="banar-content">
+                <h3>Hi, I  am</h3>
+                <h1>Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="button-primary">Download CV</button>
+                <button>Contact</button>
+            </div>
+            <img class="profile-pic" src="images/hardy.png" alt="hardy">
+           </div>
     </header>
     <main>
 
